SentienceEntity (v1.3): + No longer need for PacketEvents full upgrade to NMS